# uvpy_run

./: .env.example  .gitignore  AGENTS.md  README.md  ROADMAP.md  catalog_lint.py  main.py  nohup.out  pyproject.toml  robots.txt  sitemap.xml  test_icons.html  tool_metadata.py
static_pyfiles/: aria2rpc_watch.py  brick.py  cld.py  demo.py  disk_usage.py  flask_secret.py  image.py  imgtr.py  imgtrans.py  mkdir_batch.py  nospace.py  passwordgen.py  qr.py  rename_files.py  snake.py  terminal_proxy_ip.py  today.py
static_text/: pyright_base_config.toml
static_textbasedfiles/: pyright_base_config.toml
templates/: list_tools.html  script_detail.html
tests/: test_app.py  test_catalog_lint.py  test_tool_quality.py
