[project]
name = "config-txt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "loguru>=0.7.3",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "qrcode>=8.2",
    "requests>=2.32.5",
    "rich>=14.1.0",
]

[tool.pyright]
reportOptionalMemberAccess = false
reportArgumentType = false
reportUnknownParameterType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportAny = false
reportUnusedCallResult = false
